mini_kube_deployment/monitoring/grafana_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
